--- a/Core/VVVV.DX11.Lib/VVVV.DX11.Lib.csproj
+++ b/Core/VVVV.DX11.Lib/VVVV.DX11.Lib.csproj
@@ -56,7 +56,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy_Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\Deploy\Debug\x64\lib\core\</OutputPath>
+    <OutputPath>..\..\Deploy\Debug\x64\packs\DX11\core\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
@@ -67,7 +67,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy_Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\Deploy\Debug\x86\lib\core\</OutputPath>
+    <OutputPath>..\..\Deploy\Debug\x86\packs\DX11\core\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
@@ -75,7 +75,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy_Release|x64'">
-    <OutputPath>..\..\Deploy\Release\x64\lib\core\</OutputPath>
+    <OutputPath>..\..\Deploy\Release\x64\packs\DX11\core\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
@@ -84,7 +84,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy_Release|x86'">
-    <OutputPath>..\..\Deploy\Release\x86\lib\core\</OutputPath>
+    <OutputPath>..\..\Deploy\Release\x86\packs\DX11\core\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
@@ -108,6 +108,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="SlimDX">
       <HintPath>..\..\Dependencies\$(Platform)\SlimDX.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="PluginInterfaces">
       <HintPath>..\..\Dependencies\$(Platform)\VVVV.PluginInterfaces.dll</HintPath>
