--- a/Nodes/VVVV.DX11.Nodes.Vlc/VVVV.DX11.Nodes.Vlc.csproj
+++ b/Nodes/VVVV.DX11.Nodes.Vlc/VVVV.DX11.Nodes.Vlc.csproj
@@ -61,7 +61,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy_Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\Deploy\Debug\x64\packs\DX11\nodes\plugins\</OutputPath>
+    <OutputPath>..\..\Deploy\Debug\x64\packs\DX11\nodes\plugins\Vlc\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -115,6 +115,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="SlimDX">
       <HintPath>..\..\Dependencies\$(Platform)\SlimDX.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="PluginInterfaces">
       <HintPath>..\..\Dependencies\$(Platform)\VVVV.PluginInterfaces.dll</HintPath>
