--- a/src/Core/VVVV.DX11.Factories/VVVV.DX11.Factories.csproj
+++ b/src/Core/VVVV.DX11.Factories/VVVV.DX11.Factories.csproj
@@ -17,6 +17,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>..\..\..\factories\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <OutputPath>..\..\..\factories\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition.CodePlex">
