--- a/src/Nodes/VVVV.DX11.Nodes.Assimp/VVVV.DX11.Nodes.Assimp.csproj
+++ b/src/Nodes/VVVV.DX11.Nodes.Assimp/VVVV.DX11.Nodes.Assimp.csproj
@@ -15,6 +15,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>..\..\..\nodes\plugins\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <OutputPath>..\..\..\nodes\plugins\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition.CodePlex">
