--- a/src/Nodes/VVVV.DX11.Nodes.MSKinect/VVVV.DX11.Nodes.MSKinect.csproj
+++ b/src/Nodes/VVVV.DX11.Nodes.MSKinect/VVVV.DX11.Nodes.MSKinect.csproj
@@ -15,6 +15,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>..\..\..\nodes\plugins\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <OutputPath>..\..\..\nodes\plugins\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Kinect">
       <SpecificVersion>False</SpecificVersion>
