--- a/src/Nodes/VVVV.DX11.Nodes.Text/VVVV.DX11.Nodes.Text.vcxproj
+++ b/src/Nodes/VVVV.DX11.Nodes.Text/VVVV.DX11.Nodes.Text.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)\Deploy\Debug\x86\packs\DX11\nodes\plugins\</OutDir>
+    <OutDir>..\..\..\nodes\plugins\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
